--- a/A106260018_張鈞茹_選擇題.ipynb
+++ b/A106260018_張鈞茹_選擇題.ipynb
@@ -28,11 +28,11 @@
       "metadata": {
         "id": "0Dkdv2CyjXqO",
         "colab_type": "code",
+        "outputId": "ac9cf17c-f529-443e-c904-4a9dc6ebb841",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 139
-        },
-        "outputId": "ac9cf17c-f529-443e-c904-4a9dc6ebb841"
+        }
       },
       "source": [
         "# 1. 下列何者代表 Python 的註解？　(A) //　(B) #　(C) /*　(D)@。\n",
@@ -50,7 +50,7 @@
         "# 7. 在 Python 程式語⾔中，利⽤ input 指令讀到的值，型態為？ (A) 數值 (B) 字串 (C) 浮點數 (D) 以上皆否。\n",
         "print(\"C\")"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -66,6 +66,19 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oY1PFHduliK4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
